# ChangeLog for media-libs/libtheora
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.96 2009/08/29 13:23:22 ssuominen Exp $

  29 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  libtheora-1.1_beta3.ebuild,
  +files/libtheora-1.1_beta3-encoder_disabled.c:
  Fix building with USE="-encode".

*libtheora-1.1_beta3 (27 Aug 2009)

  27 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtheora-1.1_beta3.ebuild:
  Version bump.

  21 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  libtheora-1.1_alpha2.ebuild:
  Build and install png2theora (and other binaries) if USE examples is used.

*libtheora-1.1_alpha2 (09 Jun 2009)

  09 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtheora-1.1_alpha2.ebuild:
  Version bump wrt #273374, thanks to Christopher Culver for reporting.

  15 May 2009; Raúl Porcel <armin76@gentoo.org> libtheora-1.0.ebuild:
  arm/ia64/sh/sparc stable wrt #218145

  10 May 2009; Mounir Lamouri <volkmar@gentoo.org> libtheora-1.0.ebuild:
  Stable on ppc, bug 218145

  07 May 2009; Jeroen Roovers <jer@gentoo.org> libtheora-1.0.ebuild:
  Stable for HPPA (bug #218145).

*libtheora-1.1_alpha1 (07 May 2009)

  07 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  +libtheora-1.1_alpha1.ebuild:
  Version bump wrt #264954, thanks to Wicher Minnaard for reporting.

  05 May 2009; Samuli Suominen <ssuominen@gentoo.org> libtheora-1.0.ebuild:
  Add VARTEXFONTS variable to avoid sandbox failure wrt #218145, Comment #6.

  03 May 2009; Markus Meier <maekke@gentoo.org> libtheora-1.0.ebuild:
  amd64/x86 stable, bug #218145

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> libtheora-1.0.ebuild:
  Stable on alpha, bug #218145

  01 May 2009; Brent Baude <ranger@gentoo.org> libtheora-1.0.ebuild:
  stable ppc64, bug 218145

  08 Dec 2008; Brent Baude <ranger@gentoo.org>
  libtheora-1.0_beta3-r1.ebuild:
  stable ppc64, bug 244582

*libtheora-1.0 (06 Nov 2008)
