@@ -1,8 +1,10 @@
 AUX libtheora-1.0_beta2-flags.patch 763 RMD160 eb1d55ab98e5eae570845baf17eb93301271596c SHA1 b79a4338454e832d2b46df55bae1de967919eb24 SHA256 7efb7aec3e472914ffc0facbdc9769e088e5d69e285254d19f353555ca90c7d6
 AUX libtheora-1.1_beta3-encoder_disabled.c 2026 RMD160 72faa797c0dd7f8fe9a25031883da58a63e02aaf SHA1 58a47cd01aec7edf49070fd8bd69a88b568c3b1c SHA256 085a427ebd2102e7d8f743f2c672b57c5cb153dd4e73cbb86cdb801494e4cdc7
 DIST libtheora-1.0.tar.bz2 1652987 RMD160 f72d0a2ce8475a888ab67fd77b7126d66d537c9b SHA1 02717773001b44f95bc6c23111a89493a4a93f87 SHA256 3ae9df56e8fc75ffe26e63a13cae2ce79d079416175fb0baffe0e2de8dc91a6d
+DIST libtheora-1.1.0.tar.bz2 1785634 RMD160 c89c7d0622a89dbf2fcb5e6cf00c7e1bae42b0da SHA1 fb1686a8318d79f889f248ff774265d0ec4c6430 SHA256 74be9fe9f85d18c45bdcbb018cebf12c74e2234aeecb4d4c4cb92d80bdd287e2
 DIST libtheora-1.1beta3.tar.bz2 1785382 RMD160 a51b6b5cdafe1130ee6439cea8e892f37a10b507 SHA1 abca97e4bd2caad896e1c2c1359626a9033da8b0 SHA256 d873f4c0181fa75b5e3cf069433740b2777810c2fd58055d4e62aaac0c239d5e
 EBUILD libtheora-1.0.ebuild 1673 RMD160 d4538008fa711f95b2f8dca23a8fdaac03178329 SHA1 44d6be1bb19a1d8d0d30db90ec098eb9554a83ba SHA256 7114d0552831d686462235d3e4ecbab5250b633faa5368dfa694dbc45f777d0e
+EBUILD libtheora-1.1.0.ebuild 1883 RMD160 276abf2b883a4e3f4d8ca22c619225b5719e07f1 SHA1 201d1cad706c34c4dab4bd515028068b9b226133 SHA256 642facfb71c9929cd2a2dfc360e2f4ea49f6cf7847004997244e1e900908a34a
 EBUILD libtheora-1.1_beta3.ebuild 1867 RMD160 eb5081e433f76edc9e06cd458fbdcdc059f823c9 SHA1 8a64650e36fef35def9519d372cb78886f412b37 SHA256 5e2953d8c1f6a74c381c990ca0d85492aec370faa02dc504d81f82873d8c2d74
-MISC ChangeLog 13692 RMD160 ba7acb28d13a093cb63bb6e6a2236e338d7da077 SHA1 f2a0492737880e1e10a9d955c8fabfad2a5dae4f SHA256 9c30a0497631fff69c6a4b886d6214d22780ea369331ac23b8c52acbf99de775
+MISC ChangeLog 13871 RMD160 4a4cbed0cea8c7427feb2843cff4ccfa13ec31a3 SHA1 c81a1411b97e85009226a45966d842b71ca420c4 SHA256 466009d2a35b41fdbfcc8a484c0de97eca88861768d6c49f5f12b879c7a64766
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
