@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libtheora
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.96 2009/08/29 13:23:22 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libtheora/ChangeLog,v 1.97 2009/09/27 08:16:18 aballier Exp $
+
+*libtheora-1.1.0 (27 Sep 2009)
+
+  27 Sep 2009; Alexis Ballier <aballier@gentoo.org> +libtheora-1.1.0.ebuild:
+  version bump, by Arseny Solokha <b0ntrict0r@yandex.ru>, bug #286421
 
   29 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
   libtheora-1.1_beta3.ebuild,
